Fix randomize position within viewport

--- a/project-folder/index.html
+++ b/project-folder/index.html
@@ -5,10 +5,12 @@
     <title>COMP 4537 Lab 0 MHO</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body id="gameWindow">
-    <p>How many buttons to create?</p>
-    <input type="text" id="buttonCount">
-    <button id="goButton">Go!</button>
+<body>
+    <div style="position:fixed">
+        <p>How many buttons to create?</p>
+        <input type="text" id="buttonCount">
+        <button id="goButton">Go!</button>
+    </div>
     <div id="buttonContainer"></div>
 </body>
 <script src="js/script.js"></script>
