Implement addClickFunction() to class Button

--- a/project-folder/index.html
+++ b/project-folder/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div style="position:fixed">
+    <div style="position:fixed; z-index: +1;">
         <p>How many buttons to create?</p>
         <input type="text" id="buttonCount">
         <button id="goButton">Go!</button>
