Reach functional message display

--- a/project-folder/index.html
+++ b/project-folder/index.html
@@ -8,10 +8,10 @@
 <body>
     <div style="position:fixed; z-index: +1;">
         <p>How many buttons to create?</p>
-        <input type="text" id="buttonCount">
+        <input type="text" id="UserInput">
         <button id="goButton">Go!</button>
     </div>
     <div id="buttonContainer"></div>
 </body>
-<script src="js/script.js"></script>
+<script type="module" src="js/script.js"></script>
 </html>
