Remove inline CSS

--- a/COMP4537/labs/0/index.html
+++ b/COMP4537/labs/0/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div style="position:fixed; z-index: +1;">
+    <div id="WelcomeMessageContainer">
         <p>How many buttons to create?</p>
         <input type="text" id="UserInput">
         <button id="goButton">Go!</button>
