--- a/COMP4537/labs/0/index.html
+++ b/COMP4537/labs/0/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COMP 4537 Lab 0 MHO</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/COMP4537/labs/0/css/style.css">
 </head>
 <body>
     <div id="WelcomeMessageContainer">
@@ -13,5 +13,5 @@
     </div>
     <div id="buttonContainer"></div>
 </body>
-<script type="module" src="js/script.js"></script>
+<script type="module" src="/COMP4537/labs/0/js/script.js"></script>
 </html>
