--- a/COMP4537/labs/1/writer.html
+++ b/COMP4537/labs/1/writer.html
@@ -1,17 +1,16 @@
-<html lang="en"></html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>COMP 4537 Lab 0 MHO</title>
-    <link rel="stylesheet" href="/COMP4537/labs/0/css/style.css">
+    <title>COMP 4537 Lab 1 MHO</title>
+    <link rel="stylesheet" href="/COMP4537/labs/1/css/style.css">
 </head>
 <body>
-    <div id="WelcomeMessageContainer">
-        <p>How many buttons to create?</p>
-        <input type="text" id="UserInput">
-        <button id="goButton">Go!</button>
-    </div>
-    <div id="buttonContainer"></div>
+    <h1>COMP4537 Lab 1 Marco Ho</h1>
+    <p id="lastStore"></p>
+
+    <div id="notesContainer"></div>
+    <button id="addNote">Add</button>
 </body>
-<script type="module" src="/COMP4537/labs/0/js/script.js"></script>
+<script type="module" src="/COMP4537/labs/1/js/script.js"></script>
 </html>
