--- a/COMP4537/labs/1/index.html
+++ b/COMP4537/labs/1/index.html
@@ -10,5 +10,5 @@
     <a href="writer.html"><button>Go to writer page</button></a>
     <a href="reader.html"><button>Go to reader page</button></a>
 </body>
-<script type="module" src="/COMP4537/labs/1/js/script.js"></script>
+<!-- <script type="module" src="/COMP4537/labs/1/js/script.js"></script> -->
 </html>
