--- a/COMP4537/labs/1/writer.html
+++ b/COMP4537/labs/1/writer.html
@@ -6,11 +6,10 @@
     <link rel="stylesheet" href="/COMP4537/labs/1/css/style.css">
 </head>
 <body>
-    <h1>COMP4537 Lab 1 Marco Ho</h1>
     <p id="lastStore"></p>
-
     <div id="notesContainer"></div>
     <button id="addNote">Add</button>
+    <a href="index.html"><button>Back to index</button></a>
 </body>
 <script type="module" src="/COMP4537/labs/1/js/script.js"></script>
 </html>
