--- a/COMP4537/labs/1/index.html
+++ b/COMP4537/labs/1/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>COMP4537 Lab 1 Marco Ho</h1>
-    <a href="writer.html"><button>Go to writer page</button></a>
-    <a href="reader.html"><button>Go to reader page</button></a>
+    <a href="/COMP4537/labs/1/writer.html"><button>Go to writer page</button></a>
+    <a href="/COMP4537/labs/1/reader.html"><button>Go to reader page</button></a>
 </body>
 <!-- <script type="module" src="/COMP4537/labs/1/js/script.js"></script> -->
 </html>
