--- a/COMP4537/labs/1/reader.html
+++ b/COMP4537/labs/1/reader.html
@@ -8,7 +8,7 @@
 <body>
     <p id="lastStore"></p>
     <div id="notesContainer"></div>
-    <a href="index.html"><button>Back to index</button></a>
+    <a href="/COMP4537/labs/1/index.html"><button>Back to index</button></a>
 </body>
 <script type="module" src="/COMP4537/labs/1/js/script.js"></script>
 </html>
