--- a/COMP4537/labs/1/writer.html
+++ b/COMP4537/labs/1/writer.html
@@ -9,7 +9,7 @@
     <p id="lastStore"></p>
     <div id="notesContainer"></div>
     <button id="addNote">Add</button>
-    <a href="index.html"><button>Back to index</button></a>
+    <a href="/COMP4537/labs/1/index.html"><button>Back to index</button></a>
 </body>
 <script type="module" src="/COMP4537/labs/1/js/script.js"></script>
 </html>
